robots.txt and minor style schanges

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Chencho Mendoza fotografía" />
+  <meta name="keywords"
+    content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza">
+  <meta name="google-site-verification" content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <!--
