Changed title and description

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Chencho Mendoza fotografía" />
+  <meta name="description"
+    content="Fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato, nocturna. Puedes contactarme a través de mi correo." />
   <meta name="keywords"
     content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza">
   <meta name="google-site-verification" content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk" />
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Chencho Mendoza</title>
+  <title>Chencho Mendoza | Fotografía</title>
 </head>
 
 <body>
