--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato, nocturna. Puedes contactarme a través de mi correo." />
+    content="José Luis García Mendoza, fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato, nocturna." />
   <meta name="keywords"
     content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza">
   <meta name="google-site-verification" content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk" />
