Changed description meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="José Luis García Mendoza, fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato, nocturna." />
+    content="Portfolio personal de José Luis García Mendoza, fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato y nocturna. Personal portfolio of Jose Luis García Mendoza, photographer from A Coruña. Landscape, nature, portrait, and night photography." />
   <meta name="keywords"
     content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza">
   <meta name="google-site-verification" content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk" />
