--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="Portfolio personal de José Luis García Mendoza, fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato y nocturna. Personal portfolio of Jose Luis García Mendoza, photographer from A Coruña. Landscape, nature, portrait, and night photography." />
-  <meta name="keywords"
-    content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza">
-  <meta name="google-site-verification" content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Portfolio personal de José Luis García Mendoza, fotógrafo de A Coruña. Fotografía de paisaje, naturaleza, retrato y nocturna. Personal portfolio of Jose Luis García Mendoza, photographer from A Coruña. Landscape, nature, portrait, and night photography."
+    />
+    <meta
+      name="keywords"
+      content="Fotógrafo, portfolio, fotografía, Chencho Mendoza, naturaleza, paisajes, fotógrafo , fotógrafo La Coruña, José Luis García Mendoza"
+    />
+    <meta
+      name="google-site-verification"
+      content="DYMAnKoeKZ9DaZP8Qo6Zd-Q__uwkyMwiYRVEzTQ0zxk"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -29,13 +41,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Chencho Mendoza | Fotografía</title>
-</head>
+    <title>Chencho Mendoza | Fotografía</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -45,6 +57,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
